Need to parse version and use letter to digit (or vice versa) separators for things like rc4, alpha1 etc