@@ -4,14 +4,11 @@ import static net.stickycode.exception.Preconditions.notBlank;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.regex.Pattern;
 
 import net.stickycode.stile.version.VersionParser;
 
 
 public class ComponentVersionParser implements VersionParser {
-
-  private static Pattern NUMERIC_VERSION = Pattern.compile("[pr]?[0-9]+");
 
   @Override
   public ComponentVersion parse(String versionString) {
@@ -21,34 +18,35 @@ public class ComponentVersionParser implements VersionParser {
   private ComponentVersion process(String versionString) {
     List<AbstractVersionComponent> v = new LinkedList<AbstractVersionComponent>();
 
-    for (String s : versionString.split("[-,_:.]")) {
-      if (NUMERIC_VERSION.matcher(s).matches())
-        v.add(parseNumeric(s));
+    VersionString previous = null;
+    for (VersionString s : new VersionStringSpliterable(versionString)) {
+      if (s.isNumber())
+        v.add(parseNumeric(previous, s));
 
-      else
+      else if (s.isString())
         v.add(parseString(s));
     }
 
     return new ComponentVersion(v);
   }
 
-  private AbstractVersionComponent parseString(String s) {
+  private AbstractVersionComponent parseString(VersionString s) {
     try {
-      return new DefinedStringVersionComponent(VersionDefinition.fromCode(s));
+      return new DefinedStringVersionComponent(VersionDefinition.fromCode(s.toString()));
     }
     catch (IllegalArgumentException e) {
-      return new StringVersionComponent(s);
+      return new StringVersionComponent(s.toString());
     }
   }
 
-  private AbstractVersionComponent parseNumeric(String s) {
-    if (s.startsWith("p"))
-      return new PatchNumericVersionComponent(s.substring(1));
+  private AbstractVersionComponent parseNumeric(VersionString previous, VersionString s) {
+//    if (s.startsWith("p"))
+//      return new PatchNumericVersionComponent(s.substring(1));
+//
+//    if (s.startsWith("r"))
+//      return new RevisionNumericVersionComponent(s.substring(1));
 
-    if (s.startsWith("r"))
-      return new RevisionNumericVersionComponent(s.substring(1));
-
-    return new NumericVersionComponent(new Integer(s));
+    return new NumericVersionComponent(Integer.valueOf(s.toString()));
   }
 
 }
